# CV-Projects

./: .gitignore  data_collection.py  readme.md
Custom Ocr/: img_preprocessing.py  tasks.md
Face Recognition based login system/: README.md  app.py  auth.py  pyproject.toml  requirements.txt  run_production.py  utils.py
Face Recognition based login system/Frontend/static/css/: auth.css
Face Recognition based login system/Frontend/static/js/: auth.js
Face Recognition based login system/Frontend/templates/: login.html  register.html
Face Recognition based login system/Utils/: db_utils.py  utils.py
GANS/: pyproject.toml
GANS/CGAN/: cgan.ipynb
GANS/DCGAN/: README.md  dcgan-celeba.ipynb  dcgan-implementation.ipynb
GANS/DCGAN/models/: discriminator_best.pth
GANS/FC-GAN/: README.md  Simple_GAN.ipynb
GANS/WGAN/: WGAN.ipynb  WGAN_with_gp.ipynb  wgan_modal.py
Gesture Volume Control/: volume_control.py
Gesture based calculator/: Augmentation.ipynb  Classification.ipynb  model.ipynb
Gesture mouse control/: main.py  mouse_control.py  pyproject.toml
vision_tools/: face_mesh_module.py  face_tracking_module.py  pose_tracking_module.py
